Wrong python path returned. "bpy.data.keys" instead of expected "bpy.data.shape_keys". #30099

Closed
opened 2012-02-07 15:32:17 +01:00 by Niko Kauppi · 4 comments

%%%Just a visual hassle with this one, see attached picture.

The blue lines returned when asking for "shape" returns "bpy.data.keys..." (seems to be a function I'm not so familiar with just yet) while I'd imagine this to return "bpy.data.shape_keys..."

Windows 7 and official blender 2.61

Other than that, great work so far. I'm finding the python stuff in blender a real pleasure to use and a HUGE time saver sometimes. :)%%%

%%%Just a visual hassle with this one, see attached picture. The blue lines returned when asking for "shape" returns "bpy.data.keys..." (seems to be a function I'm not so familiar with just yet) while I'd imagine this to return "bpy.data.shape_keys..." Windows 7 and official blender 2.61 Other than that, great work so far. I'm finding the python stuff in blender a real pleasure to use and a HUGE time saver sometimes. :)%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Got the same issue with current trunk. Campbell, it should be simple for you. Thanks for looking! :)%%%

%%%Got the same issue with current trunk. Campbell, it should be simple for you. Thanks for looking! :)%%%

%%%Fixed in svn43958.

Thanks for reporting. :)%%%

%%%Fixed in svn43958. Thanks for reporting. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender-addons#30099
No description provided.