source/blender/blenkernel/intern/idcode.c
@@ -58,7 +58,7 @@ static IDType idtypes[]= {
 	{ ID_ID,		"ID",		"ids",			0}, /* plural is fake */
 	{ ID_IM,		"Image",	"images",		IDTYPE_FLAGS_ISLINKABLE}, 
 	{ ID_IP,		"Ipo",		"ipos",			IDTYPE_FLAGS_ISLINKABLE},  /* deprecated */
-	{ ID_KE,		"Key",		"keys",			0}, 
+	{ ID_KE,		"Key",		"shape_keys",	0}, 
 	{ ID_LA,		"Lamp",		"lamps",		IDTYPE_FLAGS_ISLINKABLE}, 
 	{ ID_LI,		"Library",	"libraries",	0}, 
 	{ ID_LT,		"Lattice",	"lattices",		IDTYPE_FLAGS_ISLINKABLE}, 
